beta 2 测试功能是否正常

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
-# OpenAI API密钥
-OPENAI_API_KEY=your_openai_api_key_here
+# Silicon Flow (硅基流动) API密钥
+SILICONFLOW_API_KEY=your_siliconflow_api_key_here
+SILICONFLOW_MODEL=THUDM/GLM-Z1-9B-0414
+SILICONFLOW_TEMPERATURE=0.7
+SILICONFLOW_BASE_URL=https://api.siliconflow.cn/v1
 
 # Tavily搜索API密钥 (用于网络搜索工具)
 TAVILY_API_KEY=your_tavily_api_key_here
 
+# LangSmith配置 (用于运行追踪和监控)
+LANGSMITH_API_KEY=your_langsmith_api_key_here
+LANGSMITH_PROJECT=langchain-agent-1
+LANGSMITH_TRACING=true
+
 # 其他可选配置
-LANGCHAIN_TRACING_V2=true
-LANGCHAIN_API_KEY=your_langchain_api_key_here
-LANGCHAIN_PROJECT=agent_1
