--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,10 @@ dependencies = [
     "fastapi>=0.104.0",
     "pydantic>=2.5.0",
     "python-dotenv>=1.0.0",
+    "pydantic-settings>=2.0.0",
     "tavily-python>=0.3.0",
+    "sse-starlette>=2.1.0,<2.2.0",
+    "langgraph-cli[inmem]>=0.4.7",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
