--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "tavily-python>=0.3.0",
     "sse-starlette>=2.1.0,<2.2.0",
     "langgraph-cli[inmem]>=0.4.7",
+    "langchain-tavily>=0.2.13",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
